--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,17 +1,17 @@
 .checkout {
-  display: flex;
-  padding: 20px;
   background-color: white;
+  display: flex;
   height: max-content;
+  padding: 20px;
 }
 
 .checkout__ad {
-  width: 100%;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .checkout__title {
-  margin-right: 10px;
-  padding: 10px;
   border-bottom: 1px solid lightgray;
+  margin-right: 10px;
+  padding: 10px 0;
 }
