--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -11,16 +11,25 @@
 .checkoutProduct__info > button {
   background: #f0c14b;
   border: 1px solid;
-  margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
+  border-radius: 2px;
   color: #111;
   cursor: pointer;
+  margin-top: 10px;
+  padding: 3px;
+  transition: all 0.1s;
+}
+.checkoutProduct__info > button:hover {
+  transform: scale(1.02);
+}
+.checkoutProduct__info > button:active {
+  transform: scale(0.98);
 }
 
 .checkoutProduct__image {
   object-fit: contain;
-  width: 180px;
   height: 180px;
+  width: 180px;
 }
 
 .checkoutProduct__rating {
