--- a/src/Login.css
+++ b/src/Login.css
@@ -1,28 +1,25 @@
 .login {
+  align-items: center;
   background-color: white;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100vh;
 }
 
 .login__logo {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px auto;
   object-fit: contain;
   width: 100px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .login__container {
-  width: 300px;
-  height: fit-content;
+  border: 1px solid lightgray;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
-  border-radius: 5px;
-  border: 1px solid lightgray;
+  height: fit-content;
   padding: 20px;
+  width: 300px;
 }
 
 .login__container > h1 {
@@ -35,32 +32,32 @@
 }
 
 .login__container > form > input {
+  background-color: white;
   height: 30px;
   margin-bottom: 10px;
-  background-color: white;
   width: 98%;
 }
 
 .login__container > p {
-  margin-top: 15px;
   font-size: 12px;
+  margin-top: 15px;
 }
 
 .login__signInButton {
   background: #f0c14b;
-  border-radius: 2px;
-  width: 100%;
-  height: 30px;
   border: 1px solid;
-  margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
+  border-radius: 2px;
+  height: 30px;
+  margin-top: 10px;
+  width: 100%;
 }
 
 .login__registerButton {
-  border-radius: 2px;
-  width: 100%;
-  height: 30px;
   border: 1px solid;
-  margin-top: 10px;
   border-color: darkgray;
+  border-radius: 2px;
+  height: 30px;
+  margin-top: 10px;
+  width: 100%;
 }
