--- a/src/Payment.css
+++ b/src/Payment.css
@@ -30,10 +30,7 @@
   flex: 0.2;
 }
 
-.payment__address {
-  flex: 0.8;
-}
-
+.payment__address,
 .payment__items,
 .payment__details {
   flex: 0.8;
