--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -15,3 +15,22 @@
   margin-right: 10px;
   padding: 10px 0;
 }
+
+.checkout__emptyBasket {
+  justify-content: center;
+  color: #11111190;
+  display: flex;
+  flex-direction: column;
+  height: 50px;
+  padding: 20px 0;
+}
+
+.checkout__emptyBasket > span {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 1000px) {
+  .checkout {
+    flex-direction: column;
+  }
+}
