--- a/src/Orders.css
+++ b/src/Orders.css
@@ -5,3 +5,11 @@
 .orders > h1 {
   margin: 30px 0;
 }
+
+.orders__empty {
+  justify-content: center;
+  height: 50px;
+  color: #11111190;
+  display: flex;
+  flex-direction: column;
+}
