--- a/src/Payment.css
+++ b/src/Payment.css
@@ -41,6 +41,11 @@
   max-width: 400px;
 }
 
+.payment__details > form > strong {
+  margin: 8px;
+  /* max-width: 400px; */
+}
+
 .payment__details > h3 {
   padding-bottom: 20px;
 }
